syntax = "proto3";

package phoenix.metrics.v1;

option go_package = "github.com/deepaucksharma/phoenix/modules/phoenix-contracts/gen/go/metrics/v1";

// MetricPoint represents a single metric data point
message MetricPoint {
  string name = 1;
  double value = 2;
  int64 timestamp_nanos = 3;
  map<string, string> labels = 4;
}

// Pipeline represents different processing pipelines
enum Pipeline {
  PIPELINE_UNSPECIFIED = 0;
  PIPELINE_FULL_FIDELITY = 1;
  PIPELINE_OPTIMIZED = 2;
  PIPELINE_EXPERIMENTAL_TOPK = 3;
  PIPELINE_OBSERVATORY = 4;
}

// PipelineMetrics contains metrics for a specific pipeline
message PipelineMetrics {
  Pipeline pipeline = 1;
  repeated MetricPoint metrics = 2;
  int64 cardinality_estimate = 3;
  double processing_time_ms = 4;
}

// MetricsRequest for querying metrics
message MetricsRequest {
  Pipeline pipeline = 1;
  int64 start_time_nanos = 2;
  int64 end_time_nanos = 3;
  repeated string metric_names = 4;
}

// MetricsResponse contains requested metrics
message MetricsResponse {
  repeated PipelineMetrics pipeline_metrics = 1;
  string request_id = 2;
}